2002-01-11  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_toolbar_insert_stock): removed
	debugging code I didn't mean to check in.

	* gobjectmodule.c (pyg_closure_new): use PyTuple_SetItem to build
	the tuple if extra_args isn't one.  It's faster than using
	abstractions and clarifies ownership rules, so we always incref
	extra_args even if we're about to wrap it in a tuple.  Fixes
	crashes when passing callback functions into
	GtkToolbar.{append_item,prepend_item,insert_item,insert_stock,
	append_element}

2002-01-11  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (GtkTreePathArg.normal): added missing newline

	* gtk/gtk.defs (item_factory_path_from_widget): the return here
	should be gconst-gchar*.  The header in gtk is wrong, filed
	#68527 against gtk.

	* gtk/gtk.override (pygtk_item_factory_cb): if the user passed
	data to GtkItemFactory.create_items, call the callable with the
	function data as the first parameter.
	(_wrap_gtk_item_factory_create_items): take an optional
	callback_data argument.  Use PyGtkCustomNotify and
	g_object_weak_ref to free up the reference to the callable and
	data after the item factory is freed.

2002-01-11  James Henstridge  <james@daa.com.au>

	* codegen/h2def.py (find_obj_defs): handle typedef struct { ... }
	style type defs, as used in bonobo.

2002-01-09  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (GtkTreePathArg.freepath): added missing
	newline.

	* gtk/gtk.override (pygtk_tree_foreach_marshal,
	pygtk_tree_selection_marshal): handle exceptions raised in
	callback func.

2002-01-08  James Henstridge  <james@daa.com.au>

	* gtk/__init__.py (threads_*): provide these functions in the gtk
	namespace as well as gtk.gdk.

2002-01-07  James Henstridge  <james@daa.com.au>

	* examples/pygtk-demo/demos/itemfactory.py (main): the F10 key is
	used to start navigating the menu -- not alt.

	* gtk/gtk-types.c (PyGtkStyleHelper_Dealloc): use PyObject_DEL.
	(PyGtkStyle_Dealloc): same here.