@@ -1,5 +1,9 @@
 2002-01-11  Matt Wilson  <msw@redhat.com>
 
+	* Makefile.am (EXTRA_DIST): added appwindow.py
+
+	* examples/pygtk-demo/demos/appwindow.py: added demo
+
 	* gtk/gtk.override (_wrap_gtk_toolbar_insert_stock): removed
 	debugging code I didn't mean to check in.
 
